# pimoroni-pico

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _config.yml  automation.py  balls_demo.py  faqs-micropython.md  index.md  pimoroni_pico_import.cmake  setting-up-micropython.md  setting-up-the-pico-sdk.md
drivers/: CMakeLists.txt
drivers/ads1015/: CMakeLists.txt  ads1015.cmake  ads1015.cpp  ads1015.hpp
drivers/analog/: CMakeLists.txt  analog.cmake  analog.cpp  analog.hpp
drivers/analogmux/: CMakeLists.txt  analogmux.cmake  analogmux.cpp  analogmux.hpp
drivers/aps6404/: CMakeLists.txt  aps6404.cmake  aps6404.cpp  aps6404.hpp  aps6404.pio
drivers/as7262/: CMakeLists.txt  as7262.cmake  as7262.cpp  as7262.hpp
drivers/as7343/: CMakeLists.txt  as7343.cmake  as7343.cpp  as7343.hpp  as7343_regs.hpp
drivers/bh1745/: CMakeLists.txt  bh1745.cmake  bh1745.cpp  bh1745.hpp
drivers/bme280/: CMakeLists.txt  bme280.cmake  bme280.cpp  bme280.hpp
drivers/bme680/: CMakeLists.txt  bme680.cmake  bme680.cpp  bme680.hpp
drivers/bme68x/: CMakeLists.txt  bme68x.cmake  bme68x.cpp  bme68x.hpp
drivers/bme69x/: CMakeLists.txt  bme69x.cmake  bme69x.cpp  bme69x.hpp
drivers/bmp280/: CMakeLists.txt  bmp280.cmake  bmp280.cpp  bmp280.hpp
drivers/button/: button.cmake  button.cpp  button.hpp
drivers/drv2605l/: CMakeLists.txt  drv2605l.cmake  drv2605l.cpp  drv2605l.hpp
drivers/drv8830/: CMakeLists.txt  drv8830.cmake  drv8830.cpp  drv8830.hpp
drivers/duo75/: CMakeLists.txt  duo75.cmake  duo75.cpp  duo75.hpp  duo75.pio
drivers/dv_display/: CMakeLists.txt  dv_display.cmake  dv_display.cpp  dv_display.hpp  pico-stick-wide.h  pico-stick.h  swd.pio  swd_load.cpp  swd_load.hpp
drivers/e2802/: CMakeLists.txt  e2802.cmake  e2802.cpp  e2802.hpp
drivers/encoder/: CMakeLists.txt  encoder.cmake  encoder.cpp  encoder.hpp
drivers/encoder-pio/: CMakeLists.txt  capture.cpp  capture.hpp  encoder-pio.cmake  encoder.cpp  encoder.hpp  encoder.pio
drivers/esp32spi/: CMakeLists.txt  esp32spi.cmake  esp32spi.cpp  esp32spi.hpp  ip_address.cpp  ip_address.hpp  spi_drv.cpp  spi_drv.hpp
drivers/esp32wireless/: CMakeLists.txt  esp32wireless.cmake  esp32wireless.cpp  esp32wireless.hpp  spi_drv.cpp
drivers/fatfs/: CMakeLists.txt  fatfs.cmake  ffconf.h
drivers/ht0740/: CMakeLists.txt  ht0740.cmake  ht0740.cpp  ht0740.hpp
drivers/hub75/: CMakeLists.txt  hub75.cmake  hub75.cpp  hub75.hpp  hub75.pio
drivers/hub75_legacy/: hub75.cmake  hub75.hpp
drivers/icm20948/: CMakeLists.txt  icm20948.cmake  icm20948.cpp  icm20948.hpp
drivers/icp10125/: CMakeLists.txt  icp10125.cmake  icp10125.cpp  icp10125.hpp
drivers/ili9341/: CMakeLists.txt  ili9341.cmake  ili9341.cpp  ili9341.hpp
drivers/inky73/: CMakeLists.txt  inky73.cmake  inky73.cpp  inky73.hpp
drivers/io/: CMakeLists.txt  io.cmake  io.cpp  io.hpp
drivers/ioexpander/: CMakeLists.txt  ioexpander.cmake  ioexpander.cpp  ioexpander.hpp
drivers/is31fl3730/: CMakeLists.txt  is31fl3730.cmake  is31fl3730.cpp  is31fl3730.hpp
drivers/is31fl3731/: CMakeLists.txt  is31fl3731.cmake  is31fl3731.cpp  is31fl3731.hpp
drivers/lsm303d/: CMakeLists.txt  lsm303d.cmake  lsm303d.cpp  lsm303d.hpp
drivers/ltp305/: CMakeLists.txt  dotfont.hpp  ltp305.cmake  ltp305.cpp  ltp305.hpp
drivers/ltr559/: CMakeLists.txt  ltr559.cmake  ltr559.cpp  ltr559.hpp
drivers/max30105/: CMakeLists.txt  max30105.cmake  max30105.cpp  max30105.hpp
drivers/mcp9600/: CMakeLists.txt  mcp9600.cmake  mcp9600.cpp  mcp9600.hpp
drivers/mlx90640/: CMakeLists.txt  MLX90640_RP2040_I2C_Driver.cpp  mlx90640.cmake  mlx90640.cpp  mlx90640.hpp
drivers/motor/: CMakeLists.txt  calibration.cpp  calibration.hpp  motor.cmake  motor.cpp  motor.hpp  motor2.cmake  motor2.cpp  motor2.hpp  motor_cluster.cmake  motor_cluster.cpp  motor_cluster.hpp  motor_state.cpp  motor_state.hpp
drivers/ms51xb9ae/: CMakeLists.txt  ms51xb9ae.cmake  ms51xb9ae.cpp  ms51xb9ae.hpp
drivers/msa301/: CMakeLists.txt  msa301.cmake  msa301.cpp  msa301.hpp
drivers/nuvoton/: CMakeLists.txt  nuvoton.cmake  nuvoton.cpp  nuvoton.hpp
drivers/ov2640/: CMakeLists.txt  ov2640.cmake  ov2640.cpp  ov2640.hpp  ov2640.pio  ov2640_init.h
drivers/pa1010d/: CMakeLists.txt  pa1010d.cmake  pa1010d.cpp  pa1010d.hpp
drivers/pcf85063a/: CMakeLists.txt  pcf85063a.cmake  pcf85063a.cpp  pcf85063a.hpp
drivers/pid/: CMakeLists.txt  pid.cmake  pid.cpp  pid.hpp
drivers/plasma/: CMakeLists.txt  apa102.cpp  apa102.hpp  plasma.cmake  ws2812.cpp  ws2812.hpp
drivers/pms5003/: CMakeLists.txt  pms5003.cmake  pms5003.hpp
drivers/pmw3901/: CMakeLists.txt  pmw3901.cmake  pmw3901.cpp  pmw3901.hpp
drivers/psram_display/: CMakeLists.txt  psram_display.cmake  psram_display.cpp  psram_display.hpp
drivers/pwm/: CMakeLists.txt  pwm.cmake  pwm.cpp  pwm.hpp  pwm_cluster.cmake  pwm_cluster.cpp  pwm_cluster.hpp  pwm_cluster.pio
drivers/rgbled/: CMakeLists.txt  rgbled.cmake  rgbled.cpp  rgbled.hpp
drivers/rv3028/: CMakeLists.txt  rv3028.cmake  rv3028.cpp  rv3028.hpp
drivers/rv3032/: CMakeLists.txt  rv3032.cmake  rv3032.cpp  rv3032.hpp
drivers/scd4x/: CMakeLists.txt  i2c_hal.cpp  scd4x.cmake  sensirion_i2c_hal.h
drivers/sdcard/: CMakeLists.txt  LICENSE  README.md  pio_spi.c  pio_spi.h  sdcard.c  sdcard.cmake  sdcard.h  spi.pio
drivers/servo/: CMakeLists.txt  calibration.cpp  calibration.hpp  multi_pwm.cmake  multi_pwm.cpp  multi_pwm.hpp  multi_pwm.pio  servo.cmake  servo.cpp  servo.hpp  servo_cluster.cmake  servo_cluster.cpp  servo_cluster.hpp  servo_state.cpp  servo_state.hpp
drivers/sgp30/: CMakeLists.txt  README.md  sgp30.cmake  sgp30.cpp  sgp30.hpp
drivers/sh1107/: CMakeLists.txt  LICENSE  README.md  sh1107.cmake  sh1107.cpp  sh1107.hpp  sh1107_conf.h  sh1107_fonts.c  sh1107_fonts.h
drivers/shiftregister/: CMakeLists.txt  shiftregister.cmake  shiftregister.cpp  shiftregister.hpp
drivers/ssd1680/: CMakeLists.txt  ssd1680.cmake  ssd1680.cpp  ssd1680.hpp
drivers/st7567/: CMakeLists.txt  README.md  st7567.cmake  st7567.cpp  st7567.hpp
drivers/st7701/: README.md  (+5 more)
examples/: CMakeLists.txt
libraries/: CMakeLists.txt
(+2395 files in other folders)
