add_subdirectory(buttons)
add_subdirectory(chase_game)
if (TARGET hardware_rtc)
add_subdirectory(clock)
else()
    message("Skipping breakout_encoder_wheel/clock example as hardware_rtc is unavailable on this platform")
endif()
add_subdirectory(colour_picker)
add_subdirectory(encoder)
add_subdirectory(gpio_pwm)
add_subdirectory(interrupt)
add_subdirectory(led_rainbow)
add_subdirectory(stop_watch)